commit from the git  project

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div>to mak commit</div>
     </li>
     <li> 
-        <span style="color:red">git log</span> 
+        <span style="color:rgb(0, 255, 21)">git log</span> 
         <div>to see all commits (Exit : q)</div>
     </li>
     <li> 
@@ -28,7 +28,7 @@
         <div>Switch to older commit</div>
     </li>
     <li> 
-        <span style="color:red">git checkout `branch`</span> 
+        <span style="color:rgb(0, 255, 195)">git checkout `branch`</span> 
         <div>ipo oru branchilek switch aagum with latest commit.old commit latest commit povanum same command</div>
     </li>
 
